--- a/src/pages/form.html
+++ b/src/pages/form.html
@@ -132,25 +132,18 @@
             <div class="container-wedding-form text-center d-flex flex-column align-items-center mb-3">
                 <h2>Cadastro</h2>
                 <form action="../../processa.php" method="post" enctype="multipart/form-data">
-
                 <label for="nome">Nome Completo:</label>
-                <input type="text" id="nome" name="nome" required>
-
+                <input type="text" id="nome" name="nome" placeholder="Insira seu nome completo" required>
                 <label for="endereco">Endereço:</label>
-                <input type="text" id="endereco" name="endereco" required>
-
+                <input type="text" id="endereco" name="endereco" placeholder="Insira seu endereço completo" required>
                 <label for="identidade">Documento de Identidade:</label>
-                <input type="text" id="identidade" name="identidade" required>
-
+                <input type="text" id="identidade" name="identidade" placeholder="00.000.000-0" required>
                 <label for="cpf">CPF:</label>
-                <input type="text" id="cpf" name="cpf" required>
-
+                <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" required>
                 <label for="telefone">Telefone:</label>
-                <input type="text" id="telefone" name="telefone" required>
-
+                <input type="tel" id="telefone" name="telefone" required placeholder="Apenas números" maxlength="11">
                 <label for="whatsapp">WhatsApp:</label>
-                <input type="text" id="whatsapp" name="whatsapp">
-
+                <input type="tel" id="whatsapp" name="whatsapp" placeholder="(00) 00000-0000" required>
                 <label for="regime">Regime de Bens:</label>
                 <select id="regime" name="regime" required>
                     <option value="">Selecione</option>
@@ -158,30 +151,23 @@
                     <option value="comunhao_universal">Comunhão Universal</option>
                     <option value="separacao_total">Separação Total</option>
                 </select>
-
                 <p class="mt-5 input-padding">Identidade e CPF:</p>
                 <input type="file" name="doc_identidade_cpf" accept=".pdf,.jpg,.jpeg,.png" required>
-
                 <p class="input-padding">Comprovante de Residência:</p>
                 <input type="file" name="doc_residencia" accept=".pdf,.jpg,.jpeg,.png" required>
-
                 <p class="input-padding">Certidão de nascimento ou casamento:</p>
                 <input type="file" name="doc_certidao" accept=".pdf,.jpg,.jpeg,.png" required>
-
                 <p class="input-padding">Documentos das duas testemunhas:</p>
                 <input type="file" name="doc_testemunhas[]" accept=".pdf,.jpg,.jpeg,.png" multiple required>
-
-
                 <!--Booking-->
                 <label for="agendamento" class="mb-2 pt-3">Agendamento de Horário no Cartório:</label>
                 <input type="time" id="agendamento" name="agendamento" min="09:00" max="14:00" required>
                 <small class="small-note">* Escolha um horário entre 9h e 14h.</small>
-
                 <div class="note">
                     * É obrigatório comparecer ao Cartório Ribeirão da Ilha para entregar os documentos e realizar a habilitação após a inscrição online.
                 </div>
 
-                <button class="btn btn-send btn-primary btn-block shadow-sm mt-3 send-wedding-form-btn" type="submit">Enviar Inscrição</button>
+                <button id="submit-form-btn" class="btn btn-send btn-primary btn-block shadow-sm mt-3 send-wedding-form-btn" type="submit">Enviar Inscrição</button>
                 </form>
 
                 <div class="note">
@@ -288,10 +274,62 @@
         </div>
     </footer>
 
-        <!--Libraries-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="./js plugins/jquery.mask.min.js"></script> <!--Plugin de máscara para validar telefones/email-->
-        <script src="./build/script.js"></script>
+    <div id="loading-overlay">
+        <div class="loader-form"></div>
+    </div>
+
+    <!--Libraries and Loader Script-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./js plugins/jquery.mask.min.js"></script>
+    <script src="./build/script.js"></script>
+    <!--Mask for Inputs-->
+    <script>
+        // ID MASK: xx.xxx.xxx-x
+        const identidade = document.getElementById('identidade');
+        identidade.addEventListener('input', function() {
+            let x = this.value.replace(/\D/g,'').slice(0,9); // numbers only, max 9 digits
+            x = x.replace(/^(\d{2})(\d)/,'$1.$2');
+            x = x.replace(/^(\d{2})\.(\d{3})(\d)/,'$1.$2.$3');
+            x = x.replace(/^(\d{2})\.(\d{3})\.(\d{3})(\d)/,'$1.$2.$3-$4');
+            this.value = x;
+        });
+
+        // Phone
+        const telefone = document.getElementById('telefone');
+        telefone.addEventListener('input', function() {
+            this.value = this.value.replace(/\D/g, ''); // numbers only
+        });
+
+        // CPF MASK: xxx.xxx.xxx-xx
+        const cpf = document.getElementById('cpf');
+        cpf.addEventListener('input', function() {
+            let x = this.value.replace(/\D/g,'').slice(0,11); // numbers only, max 11 digits
+            x = x.replace(/(\d{3})(\d)/,'$1.$2');
+            x = x.replace(/(\d{3})\.(\d{3})(\d)/,'$1.$2.$3');
+            x = x.replace(/(\d{3})\.(\d{3})\.(\d{3})(\d{1,2})$/,'$1.$2.$3-$4');
+            this.value = x;
+        });
+
+        // Máscara para WhatsApp: (xx)xxxxx-xxxx
+        const whatsapp = document.getElementById('whatsapp');
+        whatsapp.addEventListener('input', function() {
+            let x = this.value.replace(/\D/g,'').slice(0,11); // numbers only, max 11 digits
+            if(x.length > 0) x = '(' + x;
+            if(x.length > 3) x = x.slice(0,3) + ') ' + x.slice(3);
+            if(x.length > 10) x = x.slice(0,10) + '-' + x.slice(10);
+            this.value = x;
+        });
+    </script>
+    <!--Loader for Send Button-->
+    <script>
+        document.querySelector("form").addEventListener("submit", function(e) {
+            const btn = document.getElementById("submit-form-btn");
+            btn.disabled = true;
+            btn.innerText = "Enviando...";
+            // Loading Overlay
+            document.getElementById("loading-overlay").style.display = "flex";
+        });
+    </script>
 </body>
 </html>
